--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,10 +14,29 @@
   justify-content: space-between;
 }
 
+.nav-menu ul {
+  list-style-type: none;
+  padding-left: 20px;
+  margin-top: 30px;
+}
+
+.nav-menu li {
+  border-top: 1px #ded6d9 solid;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.nav-menu li a {
+  text-decoration: none;
+  color: #048998;
+}
+
+
 .nav-user {
   border-top: #ded6d9 solid 1px;
   padding-top: 20px;
 }
+
 
 .button {
   text-decoration: none;
@@ -50,11 +69,53 @@
   padding: 10px;
 }
 
-
-
 .tile-profile-icon {
   width: 150px;
   height: 150px;
   border-radius: 100px;
   background-color: #f6f6f6;
+}
+
+.tile-votes {
+  margin-top: 20px;
+}
+
+.triangle {
+  width: 0px;
+  height: 0px;
+  border-right: 10px solid transparent;
+  border-left: 10px solid transparent;
+  border-bottom: 10px solid #f6f6f6;
+  margin: auto;
+}
+
+.votes {
+  background-color: #f6f6f6;
+  height: 30px;
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 15px;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.votes, .votes a {
+  color: #3bb4c1;
+  text-decoration: none;
+}
+
+.tile-header {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+}
+
+.tile-header-raised {
+  margin-left: 20px;
+  color: #048998;
+  border: 1px solid #048998;
+  padding: 5px;
+  border-radius: 2.5px;
 }
