--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,7 +47,7 @@
   align-items: center;
   padding: 10px;
   text-align: center;
-  justify-content: space-between
+  justify-content: space-around;
 }
 
 .menu-settings-icon {
